flutter/lib/generated/bindings.dart

// ignore_for_file: unused_element
// ignore_for_file: unused_field
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: camel_case_types
import 'dart:ffi' as ffi;
import 'package:ffi/ffi.dart' as ffi;

class LWM {
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  LWM(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  LWM.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void InitializeDartApi(
      ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Int8 Function(ffi.Int64, ffi.Pointer<ffi.Dart_CObject>)>>
          post_C_object,
      int dart_port) {
    return _InitializeDartApi(
      post_C_object,
      dart_port,
    );
  }

  late final _InitializeDartApi_ptr =
      _lookup<ffi.NativeFunction<_c_InitializeDartApi>>('InitializeDartApi');
  late final _dart_InitializeDartApi _InitializeDartApi =
      _InitializeDartApi_ptr.asFunction<_dart_InitializeDartApi>();

  void PlayerShowWindow(
    int player_id,
    ffi.Pointer<ffi.Utf8> window_title,
  ) {
    return _PlayerShowWindow(
      player_id,
      window_title,
    );
  }

  late final _PlayerShowWindow_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerShowWindow>>('PlayerShowWindow');
  late final _dart_PlayerShowWindow _PlayerShowWindow =
      _PlayerShowWindow_ptr.asFunction<_dart_PlayerShowWindow>();

  void PlayerCloseWindow(
    int player_id,
  ) {
    return _PlayerCloseWindow(
      player_id,
    );
  }

  late final _PlayerCloseWindow_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerCloseWindow>>('PlayerCloseWindow');
  late final _dart_PlayerCloseWindow _PlayerCloseWindow =
      _PlayerCloseWindow_ptr.asFunction<_dart_PlayerCloseWindow>();

  void PlayerCreate(
    int player_id,
    bool show_window,
    ffi.Pointer<ffi.Utf8> window_title,
  ) {
    return _PlayerCreate(
      player_id,
      show_window ? 1 : 0,
      window_title,
    );
  }

  late final _PlayerCreate_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerCreate>>('PlayerCreate');
  late final _dart_PlayerCreate _PlayerCreate =
      _PlayerCreate_ptr.asFunction<_dart_PlayerCreate>();

  void PlayerDispose(
    int player_id,
  ) {
    return _PlayerDispose(
      player_id,
    );
  }

  late final _PlayerDispose_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerDispose>>('PlayerDispose');
  late final _dart_PlayerDispose _PlayerDispose =
      _PlayerDispose_ptr.asFunction<_dart_PlayerDispose>();

  void PlayerOpen(
    int player_id,
    int size,
    ffi.Pointer<ffi.Pointer<ffi.Utf8>> uris,
    ffi.Pointer<ffi.Int32> ids,
  ) {
    return _PlayerOpen(
      player_id,
      size,
      uris,
      ids,
    );
  }

  late final _PlayerOpen_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerOpen>>('PlayerOpen');
  late final _dart_PlayerOpen _PlayerOpen =
      _PlayerOpen_ptr.asFunction<_dart_PlayerOpen>();

  void PlayerPlay(
    int player_id,
  ) {
    return _PlayerPlay(
      player_id,
    );
  }

  late final _PlayerPlay_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerPlay>>('PlayerPlay');
  late final _dart_PlayerPlay _PlayerPlay =
      _PlayerPlay_ptr.asFunction<_dart_PlayerPlay>();

  void PlayerPause(
    int player_id,
  ) {
    return _PlayerPause(
      player_id,
    );
  }

  late final _PlayerPause_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerPause>>('PlayerPause');
  late final _dart_PlayerPause _PlayerPause =
      _PlayerPause_ptr.asFunction<_dart_PlayerPause>();

  void PlayerAdd(
    int player_id,
    ffi.Pointer<ffi.Utf8> uri,
    int id,
  ) {
    return _PlayerAdd(
      player_id,
      uri,
      id,
    );
  }

  late final _PlayerAdd_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerAdd>>('PlayerAdd');
  late final _dart_PlayerAdd _PlayerAdd =
      _PlayerAdd_ptr.asFunction<_dart_PlayerAdd>();

  void PlayerRemove(
    int player_id,
    int index,
  ) {
    return _PlayerRemove(
      player_id,
      index,
    );
  }

  late final _PlayerRemove_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerRemove>>('PlayerRemove');
  late final _dart_PlayerRemove _PlayerRemove =
      _PlayerRemove_ptr.asFunction<_dart_PlayerRemove>();

  void PlayerNext(
    int player_id,
  ) {
    return _PlayerNext(
      player_id,
    );
  }

  late final _PlayerNext_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerNext>>('PlayerNext');
  late final _dart_PlayerNext _PlayerNext =
      _PlayerNext_ptr.asFunction<_dart_PlayerNext>();

  void PlayerBack(
    int player_id,
  ) {
    return _PlayerBack(
      player_id,
    );
  }

  late final _PlayerBack_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerBack>>('PlayerBack');
  late final _dart_PlayerBack _PlayerBack =
      _PlayerBack_ptr.asFunction<_dart_PlayerBack>();

  void PlayerJump(
    int player_id,
    int index,
  ) {
    return _PlayerJump(
      player_id,
      index,
    );
  }

  late final _PlayerJump_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerJump>>('PlayerJump');
  late final _dart_PlayerJump _PlayerJump =
      _PlayerJump_ptr.asFunction<_dart_PlayerJump>();

  void PlayerSeek(
    int player_id,
    int position,
  ) {
    return _PlayerSeek(
      player_id,
      position,
    );
  }

  late final _PlayerSeek_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSeek>>('PlayerSeek');
  late final _dart_PlayerSeek _PlayerSeek =
      _PlayerSeek_ptr.asFunction<_dart_PlayerSeek>();

  void PlayerSetVolume(
    int player_id,
    double volume,
  ) {
    return _PlayerSetVolume(
      player_id,
      volume,
    );
  }

  late final _PlayerSetVolume_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetVolume>>('PlayerSetVolume');
  late final _dart_PlayerSetVolume _PlayerSetVolume =
      _PlayerSetVolume_ptr.asFunction<_dart_PlayerSetVolume>();

  void PlayerSetRate(
    int player_id,
    double rate,
  ) {
    return _PlayerSetRate(
      player_id,
      rate,
    );
  }

  late final _PlayerSetRate_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetRate>>('PlayerSetRate');
  late final _dart_PlayerSetRate _PlayerSetRate =
      _PlayerSetRate_ptr.asFunction<_dart_PlayerSetRate>();

  void PlayerSetAudioBalance(
    int player_id,
    double audio_balance,
  ) {
    return _PlayerSetAudioBalance(
      player_id,
      audio_balance,
    );
  }

  late final _PlayerSetAudioBalance_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetAudioBalance>>(
          'PlayerSetAudioBalance');
  late final _dart_PlayerSetAudioBalance _PlayerSetAudioBalance =
      _PlayerSetAudioBalance_ptr.asFunction<_dart_PlayerSetAudioBalance>();

  void PlayerSetAutoplay(
    int player_id,
    bool autoplay,
  ) {
    return _PlayerSetAutoplay(
      player_id,
      autoplay ? 1 : 0,
    );
  }

  late final _PlayerSetAutoplay_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetAutoplay>>('PlayerSetAutoplay');
  late final _dart_PlayerSetAutoplay _PlayerSetAutoplay =
      _PlayerSetAutoplay_ptr.asFunction<_dart_PlayerSetAutoplay>();

  void PlayerSetIsLooping(
    int player_id,
    bool looping,
  ) {
    return _PlayerSetIsLooping(
      player_id,
      looping ? 1 : 0,
    );
  }

  late final _PlayerSetIsLooping_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIsLooping>>('PlayerSetIsLooping');
  late final _dart_PlayerSetIsLooping _PlayerSetIsLooping =
      _PlayerSetIsLooping_ptr.asFunction<_dart_PlayerSetIsLooping>();

  void PlayerSetIsShuffling(
    int player_id,
    bool shuffling,
  ) {
    return _PlayerSetIsShuffling(
      player_id,
      shuffling ? 1 : 0,
    );
  }

  late final _PlayerSetIsShuffling_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIsShuffling>>(
          'PlayerSetIsShuffling');
  late final _dart_PlayerSetIsShuffling _PlayerSetIsShuffling =
      _PlayerSetIsShuffling_ptr.asFunction<_dart_PlayerSetIsShuffling>();

  void PlayerSetIsAutoRepeat(
    int player_id,
    bool enabled,
  ) {
    return _PlayerSetIsAutoRepeat(
      player_id,
      enabled ? 1 : 0,
    );
  }

  late final _PlayerSetIsAutoRepeat_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerSetIsLooping>>(
          'PlayerSetIsAutoRepeat');
  late final _dart_PlayerSetIsLooping _PlayerSetIsAutoRepeat =
      _PlayerSetIsAutoRepeat_ptr.asFunction<_dart_PlayerSetIsAutoRepeat>();

  int PlayerGetPosition(
    int player_id,
  ) {
    return _PlayerGetPosition(
      player_id,
    );
  }

  late final _PlayerGetPosition_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerGetPosition>>('PlayerGetPosition');
  late final _dart_PlayerGetPosition _PlayerGetPosition =
      _PlayerGetPosition_ptr.asFunction<_dart_PlayerGetPosition>();

  double PlayerGetVolume(
    int player_id,
  ) {
    return _PlayerGetVolume(
      player_id,
    );
  }

  late final _PlayerGetVolume_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerGetVolume>>('PlayerGetVolume');
  late final _dart_PlayerGetVolume _PlayerGetVolume =
      _PlayerGetVolume_ptr.asFunction<_dart_PlayerGetVolume>();

  double PlayerGetRate(
    int player_id,
  ) {
    return _PlayerGetRate(
      player_id,
    );
  }

  late final _PlayerGetRate_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerGetRate>>('PlayerGetRate');
  late final _dart_PlayerGetRate _PlayerGetRate =
      _PlayerGetRate_ptr.asFunction<_dart_PlayerGetRate>();

  double PlayerGetAudioBalance(
    int player_id,
  ) {
    return _PlayerGetAudioBalance(
      player_id,
    );
  }

  late final _PlayerGetAudioBalance_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerGetAudioBalance>>(
          'PlayerGetAudioBalance');
  late final _dart_PlayerGetAudioBalance _PlayerGetAudioBalance =
      _PlayerGetAudioBalance_ptr.asFunction<_dart_PlayerGetAudioBalance>();

  double? PlayerGetDownloadProgress(
    int player_id,
  ) {
    return _PlayerGetDownloadProgress(
      player_id,
    );
  }

  late final _PlayerGetDownloadProgress_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerGetDownloadProgress>>(
          'PlayerGetDownloadProgress');
  late final _dart_PlayerGetDownloadProgress _PlayerGetDownloadProgress =
      _PlayerGetDownloadProgress_ptr.asFunction<
          _dart_PlayerGetDownloadProgress>();

  bool PlayerIsAutoplay(
    int player_id,
  ) {
    return _PlayerIsAutoplay(
          player_id,
        ) !=
        0;
  }

  late final _PlayerIsAutoplay_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerIsAutoplay>>('PlayerIsAutoplay');
  late final _dart_PlayerIsAutoplay _PlayerIsAutoplay =
      _PlayerIsAutoplay_ptr.asFunction<_dart_PlayerIsAutoplay>();

  bool PlayerIsLooping(
    int player_id,
  ) {
    return _PlayerIsLooping(
          player_id,
        ) !=
        0;
  }

  late final _PlayerIsLooping_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerIsLooping>>('PlayerIsLooping');
  late final _dart_PlayerIsLooping _PlayerIsLooping =
      _PlayerIsLooping_ptr.asFunction<_dart_PlayerIsLooping>();

  bool PlayerIsAutoRepeat(
    int player_id,
  ) {
    return _PlayerIsAutoRepeat(
          player_id,
        ) !=
        0;
  }

  late final _PlayerIsAutoRepeat_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerIsAutoRepeat>>('PlayerIsAutoRepeat');
  late final _dart_PlayerIsAutoRepeat _PlayerIsAutoRepeat =
      _PlayerIsLooping_ptr.asFunction<_dart_PlayerIsAutoRepeat>();

  bool PlayerIsShuffling(
    int player_id,
  ) {
    return _PlayerIsShuffling(
          player_id,
        ) !=
        0;
  }

  late final _PlayerIsShuffling_ptr =
      _lookup<ffi.NativeFunction<_c_PlayerIsShuffling>>('PlayerIsShuffling');
  late final _dart_PlayerIsShuffling _PlayerIsShuffling =
      _PlayerIsLooping_ptr.asFunction<_dart_PlayerIsShuffling>();

  void PlayerSetIsPlayingEventHandler(
    int player_id,
    ffi.Pointer<ffi.NativeFunction<_typedefC_1>> callback,
  ) {
    return _PlayerSetIsPlayingEventHandler(
      player_id,
      callback,
    );
  }
